# pg-bot

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix
migrations/: 2024_03_17_144142_initial_migration.sql
src/: main.rs
src/commands/: code.rs  mod.rs  ping.rs
